load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "bazel-erlang",
    urls = ["https://github.com/rabbitmq/bazel-erlang/archive/master.zip"],
    strip_prefix = "bazel-erlang-master",
)

http_archive(
    name = "rabbitmq-server",
    urls = ["https://github.com/rabbitmq/rabbitmq-server/archive/bazel-v2.zip"],
    strip_prefix = "rabbitmq-server-bazel-v2"
)

load("@rabbitmq-server//:workspace_helpers.bzl", "github_bazel_erlang_lib")

github_bazel_erlang_lib(
    name = "credentials-obfuscation",
    org = "rabbitmq",
    version = "2.3.0",
    sha256 = "20890287379005d277465d9a705b3c79e906cb19825b422350c519bbc7c6c273",
    app_name = "credentials_obfuscation",
)

github_bazel_erlang_lib(
    name = "jsx",
    org = "talentdeficit",
    version = "3.0.0",
    sha256 = "7e9b051fcc6014b3e2dec45e61734fcea991f4043f1f4df4d806d39c4123ff6c",
)

github_bazel_erlang_lib(
    name = "lager",
    org = "erlang-lager",
    version = "3.8.1",
    tag = "3.8.1",
    sha256 = "10da9c026c29b9d647353909a83b2ff769548de7308aa9e9138aa640527c83bc",
    first_srcs = ["src/lager_rotator_behaviour.erl"],
)

github_bazel_erlang_lib(
    name = "proper",
    org = "proper-testing",
    version = "1.3",
    sha256 = "b2fb969604ae71b0ea0ab7d8cedca78cef5f46181aba433c1ea493db0eaf81c6",
    first_srcs = ["src/vararg.erl"],
)

github_bazel_erlang_lib(
    name = "ranch",
    org = "ninenines",
    version = "1.7.1",
    tag = "1.7.1",
    sha256 = "5607ea3b61fe8e715a1e711c5ce9000c8f16d4c2401c11318b76f65d11bf22d4",
    build_file = "@rabbitmq-server//:BUILD.ranch",
)

github_bazel_erlang_lib(
    name = "recon",
    org = "ferd",
    version = "2.5.1",
    tag = "2.5.1",
    sha256 = "299701100e0e9f3845cf9a02d51b7c554b40342e014df2b8de7a465f5599d3af",
)
